src/objects/VPO__c.object
<CustomObject>
    <fields>
        <fullName>AccompanyAddress__c</fullName>
        <label>Help Petitioner Leave Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccompanyCity__c</fullName>
        <label>Help Petitioner Leave City:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalRelief__c</fullName>
        <label>Additional Relief Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AttorneyFees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attorney Fees Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Court_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Case</label>
        <referenceTo>Court_Case__c</referenceTo>
        <relationshipLabel>VPOs</relationshipLabel>
        <relationshipName>VPOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CriminalCaseDetails__c</fullName>
        <inlineHelpText>If Criminal Charges have been filed related to this case, what type and where were they filed?</inlineHelpText>
        <label>Criminal Case Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CriminalChargesFiled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have there been criminal charges filed against this defendant related to the incident(s) in this VPO?</inlineHelpText>
        <label>Criminal Charges Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefendantAccompaniment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Law Enforcement Accompany Defendant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOES Request Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeeAmount__c</fullName>
        <label>Attorney Fees Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fees_Costs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Fees &amp; Costs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPSMonitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request GPS Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LawEnforcementCopies__c</fullName>
        <label>Send Copies to: (Law Enforcement Agency)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeaveAddress__c</fullName>
        <label>Order Defendant to leave address:</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaveBy__c</fullName>
        <label>Defendant To Leave By:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeaveCity__c</fullName>
        <label>Order Defendant to leave city:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaveResidence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defendant To Leave Residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Place Defendant in State Care (minor)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prohibit Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoEmergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does NOT Request Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoInjury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prohibit Injury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoIntimidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prohibit Intimidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PetitionerAccompaniment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Law Enforcement Accompany Petitioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProtectAnimals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protect Animals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemoveWeapons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Def. Surrender Firearms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestCounseling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Def. Attend DV Treatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurrenderWeaponsTo__c</fullName>
        <label>Surrender Weapons To:</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferUtilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Utilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UtilitiesToTransfer__c</fullName>
        <label>Utilities To Transfer:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitationModification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspend or Modify Visitation</label>
        <type>Checkbox</type>
    </fields>
    <label>VPO</label>
    <nameField>
        <label>VPO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VPOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>